# eth-ir

./: .gitignore  CLAUDE.md  Cargo.toml  stack-shuffle.py
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  simple.rs  stack.rs
crates/data/: Cargo.toml
crates/data/src/: index.rs  lib.rs  operation.rs
crates/data/src/analysis/: basic_block_ownership.rs  data_segment.rs  mod.rs
crates/data/src/snapshots/: eth_ir_data__tests__display.snap  eth_ir_data__tests__display_with_data.snap  eth_ir_data__tests__display_with_unreachable_blocks.snap
crates/representation/: Cargo.toml
crates/representation/src/: lib.rs
docs/: opcode_fork_mapping.md
test-utils/: Cargo.toml  README.md
test-utils/fixtures/: complex_example.ir  control_flow.ir  data_and_memory.ir  internal_calls.ir  simple_function.ir
test-utils/src/: lib.rs
test-utils/src/parser/: lexer.rs  mod.rs  parser.rs  parsing.rs  snapshot_tests.rs
test-utils/src/parser/snapshots/: test_utils__parser__snapshot_tests__arithmetic_operations.snap  test_utils__parser__snapshot_tests__call_operations.snap  test_utils__parser__snapshot_tests__complex_example.snap  test_utils__parser__snapshot_tests__control_flow_branch.snap  test_utils__parser__snapshot_tests__control_flow_continue.snap  test_utils__parser__snapshot_tests__create_operations.snap  test_utils__parser__snapshot_tests__data_segments.snap  test_utils__parser__snapshot_tests__environment_operations.snap  test_utils__parser__snapshot_tests__fixture_complex_example.snap  test_utils__parser__snapshot_tests__fixture_control_flow.snap  (+10 more)
