[workspace]
resolver = "2"
members = ["crates/*", "test-utils"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
eth-ir-data = { version = "0.1.0", path = "crates/data" }


alloy-primitives = "1.1.2"
evm-glue = { git = "https://github.com/Philogy/evm-glue.git", rev = "6be3e8c8" }
insta = "1.43.1"
